Align jvm opts with akka-http